DRTII-1495 Fix splits number alignment

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -1498,7 +1498,7 @@ p {
 
 .arrivals_table__splits__queue-pax {
   min-width: 60px;
-  text-align: left;
+  text-align: right;
   margin-bottom: 8px;
 }
 
